// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Message rendering 1`] = `
<div
  className="message"
>
  <div
    className="header"
  >
    <h2>
      Testing
    </h2>
  </div>
  <div
    className="content"
  >
    <p>
      Message content
    </p>
  </div>
</div>
`;

exports[`Message rendering with a close button 1`] = `
<div
  className="message"
>
  <div
    className="header"
  >
    <h2>
      Testing
    </h2>
    <button
      onClick={[MockFunction]}
    >
      <XSquare
        color="currentColor"
        size="24"
      />
       Close
    </button>
  </div>
  <div
    className="content"
  >
    <p>
      Message content
    </p>
  </div>
</div>
`;

exports[`Message rendering with icon 1`] = `
<div
  className="message"
>
  <div
    className="header"
  >
    <Icon />
    <h2>
      Testing
    </h2>
  </div>
  <div
    className="content"
  >
    <p>
      Message content
    </p>
  </div>
</div>
`;

exports[`Message rendering with type 1`] = `
<div
  className="message error"
>
  <div
    className="header"
  >
    <AlertOctagon
      color="currentColor"
      size="24"
    />
    <h2>
      Testing
    </h2>
  </div>
  <div
    className="content"
  >
    <p>
      Message content
    </p>
  </div>
</div>
`;
